syntax = "proto3";

package pb;

option go_package = "internal/pb";

message blank{}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryList {
  repeated Category categories = 1;
}

message CategoryGetRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CategoryRequest) returns (Category) {}
  rpc CreateCategoryStream(stream CategoryRequest) returns (CategoryList) {}
  rpc CreateCategoryStreamBidirectional(stream CategoryRequest) returns (stream Category) {}
  rpc ListCategories(blank) returns (CategoryList) {}
  rpc GetCategory(CategoryGetRequest) returns (Category) {}
}